# varVAMP

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  varvamp.py
.github/workflows/: deploy.yaml  test.yaml
docs/: FAQ.md  how_varvamp_works.md  installation.md  output.md  preparing_the_data.md  usage.md  wet_lab_protocol.md
scr/: alignment.py  config.py  consensus.py  conserved.py  primers.py  reporting.py  scheme.py  varvamp.py
varvamp/: __init__.py  __main__.py  command.py
varvamp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
varvamp/scripts/: BLAST.py  __init__.py  alignment.py  blast.py  config.py  consensus.py  conserved.py  default_config.py  get_config.py  logging.py  param_estimation.py  primers.py  qpcr.py  regions.py  reporting.py  scheme.py
